--- a/README
+++ b/README
@@ -1,33 +1,52 @@
-# Instrucciones
+# PRÁCTICA 2 AOS 2023. GRUPO 9 TRABAJOS
 
-En cada carpeta se encuentra la especificacion del servicio correspondiente
+# INTRODUCCIÓN
 
-lo que hice hasta ahora corresponde a la part de la tarea que habla sobre el despliegue usando docker compose
+Este trabajo contiene la implementacion de los diferentes microservicios desarrollados durante la práctica 1 sobre los diferentes trabajos que realiza en un taller mecánico. Para ello se han usado diferentes tecnologías como:
 
-en el archivo docker-compose.yml se encuentra la configuracion de los servicios que se van a desplegar, cada uno cuenta con un servidor de mock y la ui de swagger
-
-Adicionalmente hay un servicio de proxy que se encarga de redirigir las peticiones a los servicios correspondientes
-
-## En cada servicio
-
-para el backend de cada servicio estoy mapeando el puerto default de prism a un puerto en la maquina host desde el 4010 hasta el 4016, de esta manera no tengo que cambiar el puerto por defecto del contenedor
-
-para el frontend sucede algo similar pero desde el 8000 al 8006
-
-## En el proxy
-
-Estoy haciendo que este servicio se levante luego de todos los otros, de esta manera no tengo que hacer un sleep para esperar a que los otros servicios esten listos. en la configuracion de Caddy estoy redirigiendo el trafico a cada contenedor en base a la uri. fijense que mapeo directamente al nombre del contenedor, junto con el puert 4010 en todos los casos (porque esta redireccion se esta produciendo dentro de la network bridge de docker compose)
-
-algo similar sucede con la redireccion de los frontends, pero en este caso como exponemos la ui a la maquina host directamente redirigo al purte correspondiente, que ya estaba previamente mapeado al 8000 del contenedor que esta corriendo la  UI
-
-## Problemas
-
-- Creo que hay algun error en el formato  de la config de Caddy, porque pude correrlo y probarlo una sola  vez (donde redirigia correctamente a cada contender el trafico dependiendo de la uri) Ejemplo
-: haciamos una peticion a http://127.0.0.1:80/api/v1/trabajos y nos respondia el serviciod e trabajos con la info de GET.
-
-- si probamos cada servicio por separado. Es decir realizando peticiones a localhost en los puertos correspondientes a cada servicio y en las rutas sin el prefijo de /api/v1, nos damos cuenta que responden correctamente, el problema lo esta dando el proxy, nose si por un error en la config de Caddy o por algun problema en la redireccion de los puertos o algo mas profundo.
-
-tal vez ustedes le encuentran algun error que se me esta escapando
+- Swagger, para la interfaz gráfica de estos microservicios y hacer peticiones a la API y al mock, este servicio está implementado en el archivo docker-compose.yaml
+- Caddy, como servidor proxy, implementado en un Caddyfile que redirecciona a los diferentes puertos donde se alojaría cada micro tanto en el backend como frontend
+- Docker, permite la ejecución de la aplicación en contenedores y creación de imágenes, en el repositorio se incluye un Dockerfile para la creación de la imagen de la aplicación.
+- Kubernetes o K8, es la plataforma de orquestación de los contenedores, para la creación de un clúster en local se ha usado Minikube.
+- Prism, se utiliza para generar mocks que serán utilizados para poder desplegar los otros servicios en el docker-compose.yaml y en los kubernetes.
 
 
-Para levantar todo solo hay que correr el comando docker compose up 
+# DESPLIEGUE EN DOCKER COMPOSE
+
+Para el despliegue de la aplicación en Docker  es necesario ejecutar el siguiente comando, para el docker-compose.yaml se utiliza la imagen subida a Dockerhub para trabajos, para el resto de servicios se usa la especificación realizadas por los otros grupos de openapi tanto en frontend como en backend:
+
+	docker-compose up -d
+
+# DESPLIEGUE CON KUBERNETES
+
+Para la orquestación de los contendores se ha usado el servicios de Kubernetes junto Minikube y Docker, la decisión de usar Minikube es debido para poder ejecutar el clúster de kubernetes en local. Para poder integrar en los kubernetes el servicio de “Trabajos” se ha usado nuevamente la imagen que se encuentra alojada en Dockerhub.
+Para iniciar minikube es necesario ejecutar el siguiente comando en la carpeta de la práctica:
+
+	minikube start
+
+Una vez creada la máquina virtual utilizamos el siguiente comando para montarla:
+
+	minikube mount $(pwd):/aos
+
+Para finalizar el despliegue con kubernetes se ejecutan los siguientes comandos:
+
+	kubectl apply -f k8.yaml
+
+La comprobación de volumenes se realiza con el siguiente comando:
+
+	kubectl get pvc 
+
+La comprobación de servicios se realiza con el siguiente comando:
+
+	kubectl get svc 
+
+Y finalmente la comprobación de PODs se realiza con el siguiente comando:
+
+	kubectl get pod 
+
+Para permitir el accesos a los kubernetes desde nuestro navegador debido a que los puertos son del tipo NodePort se ejecuta el siguiente comando:
+
+	minikube service --all
+
+
+
